<resources>
    <string name="app_name">GPS_Tracker</string>
    <string name="app_scheme">http</string>

    <string name="app_host_1">gpstracker.com</string>
    <string name="app_host_2">www.gpstracker.com</string>

    <string name="app_uri_1">@string/app_scheme</string>
    <string name="app_uri_2">http://gpstracker.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="service_provider_number">+34630119648</string>
    <string name="sms_default_message">Hola papa, soy el Ruben, te ha llegado el sms? estoy haciendo una prueba</string>

    <string name="preference_default_tracker_phone_number">+34630119648</string>
    <string name="preference_key_tracker_phone_number">preference_key_tracker_phone_number</string>
    <string name="preference_title_tracker_phone_number">Tracker phone number</string>

    <string name="preference_title_tracker_mode">Tracker mode</string>
    <string name="preference_key_tracker_mode">preference_key_tracker_mode</string>
    <string name="preference_summary_tracker_mode">Tracker mode summary</string>

    <string name="preference_key_visual_alarm">preference_key_visual_alarm</string>
    <string name="preference_title_visual_alarm">Visual alarm</string>

    <string name="preference_key_sound_alarm">preference_key_sound_alarm</string>
    <string name="preference_title_sound_alarm">Sound alarm</string>

    <string name="preference_key_ui_mode">preference_key_ui_mode</string>
    <string name="preference_default_ui_mode">@string/preference_value_ui_mode_quite</string>
    <string name="preference_value_ui_mode_quite">quite</string>
    <string name="preference_value_ui_mode_alert">alert</string>

    <string name="settings_title_save_button">Save button</string>
    <string name="settings_key_save_button">settings_key_save_button</string>
    <string name="settings_summary_save_button">Updates gps tracker configuration</string>

    <string name="toast_sending_message">Sending message</string>
    <string name="channel_name">gps_tracker_channel</string>
    <string name="channel_description">Notify user about warnings</string>
    <string name="CHANNEL_ID">gps_tracker_channel_id</string>
</resources>
